# stonkmonster

./: .env.example  .gitignore  README.md  pyproject.toml
data/examples/: custom_universe_template.csv  politician_trades_template.csv  smoke_universe.csv
data/processed/: autoloop_budget_state.json  sp500_membership_intervals.csv
docs/: spread_strategy_research.md
models/: autoloop_history_20260303T032618.parquet  autoloop_history_20260303T034220.parquet  autoloop_history_20260303T070748.parquet  autoloop_history_20260303T074717.parquet  autoloop_history_20260303T074930.parquet  autoloop_history_20260304T005335.parquet  groundup_runs.parquet
scripts/: auto_improve.py  build_dataset.py  report_feature_importance.py  run_api.py  run_backtest.py  run_dashboard.py  scan_signals.py  sweep_intervals.py  train_models.py
src/stonkmodel/: config.py  main.py  (+1 more)
tests/: test_api_schemas.py  test_auto_improve_loop.py  test_backtest_oos.py  test_calibration_thresholds.py  test_dataset_builder.py  test_external_features_fmp_extensions.py  test_external_features_pit.py  test_groundup_registry.py  test_indicators_backend.py  test_labels_targets.py  test_macro_fmp_extensions.py  test_market_data_adjustments.py  test_meta_filter_backtest.py  test_model_io.py  test_patterns.py  test_pipeline_scan.py  test_portfolio_sizing.py  test_recursive_threshold_optimizer.py  test_scanner_resilience.py  test_split_by_date.py  test_spread_strategies.py  test_threshold_recommendation.py  test_ticker_analysis.py  test_trainer_purge.py  test_universe_membership.py  test_walk_forward_retrain.py
(+24 files in other folders)
