[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonkmodel"
version = "0.1.0"
description = "Pattern-specific stacked model scanner for equities"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.27.0",
  "joblib>=1.4.2",
  "lxml>=5.3.0",
  "numpy>=2.0.0",
  "orjson>=3.10.0",
  "pandas>=2.2.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyarrow>=17.0.0",
  "scikit-learn>=1.5.1",
  "streamlit>=1.38.0",
  "ta>=0.11.0",
  "tenacity>=9.0.0",
  "uvicorn>=0.30.6",
  "yfinance>=0.2.44",
]

[project.optional-dependencies]
indicators = [
  "pandas-ta>=0.4.71b0; python_version < '3.14'",
]
boosters = [
  "catboost>=1.2.5",
  "lightgbm>=4.5.0",
  "xgboost>=2.1.1",
]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[project.scripts]
stonk-api = "stonkmodel.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
